# DU2Vox

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/bridge/: stage1_to_stage2.yaml
configs/stage1/: gaussian_1000.yaml  gcain_full.yaml  gcain_full_1000.yaml  uniform_1000.yaml  uniform_1000_20k.yaml  uniform_1000_full.yaml  uniform_1000_v2.yaml  uniform_1000_visible.yaml  uniform_roi38_1000.yaml  uniform_roi38_multi_1000.yaml
configs/stage2/: baseline_de_only_v6.yaml  cqr_v1_multiview.yaml  de_only_20k.yaml  full_multiview.yaml  full_multiview_20k.yaml  full_multiview_pilot_fov80.yaml  full_multiview_v5.yaml  full_multiview_v5b.yaml  full_multiview_v5c.yaml  full_multiview_v6.yaml  pilot_soft_dice.yaml  pilot_soft_dice_multiview.yaml  quick_val.yaml  smoke_v3.yaml  uniform_1000_20k.yaml  uniform_1000_v2.yaml
diagnosis/: diag_A_per_sample.json  diag_B_proj_snr.json  diagnosis_summary.md  stage2_pipeline_report.md  stage2_postfix_report.md
docs/: dice_evaluation_methodology.md
du2vox/: __init__.py
du2vox/bridge/: __init__.py  coverage_field.py  cqr_query_builder.py  (+3 more)
notebooks/: README.md  visualize_stage1.ipynb
scripts/: bridge_stage1_to_stage2.py  compare_stage1_stage2_voxel.py  diagnose_cqr_npz.py  diagnose_projection_alignment.py  diagnose_stage2_pipeline.py  eval_du2vox.py  eval_stage1.py  eval_stage2.py  evaluate_stage1.py  export_nifti.py  precompute_stage2_cqr.py  precompute_stage2_data.py  recompute_gt_voxels.py  render_stage1_figures.py  smoke_cqr_prior.py  train_stage1.py  train_stage2.py  visualize.py
(+28 files in other folders)
